fixed spacing on set row results

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -216,7 +216,7 @@ width: 50%;
 }
 
 .row-track{
-      margin-left: 8em;
+      /*margin-left: 8em;*/ /*needs to go*/
       line-height: 1em;
 }
 
@@ -225,6 +225,8 @@ width: 50%;
   overflow-y:scroll;  
   .flex(); 
   overflow-x:hidden; 
+  border: solid 1px;
+  text-align: center;
 }
 
 
@@ -312,4 +314,7 @@ h3 {
   text-decoration:underline;
   padding: 0vh 3vw;  
 }
-    
+
+.genres-vix {
+  .flex();
+}
